--- a/web/public/index.html
+++ b/web/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+      content="width=device-width, user-scalable=no ,initial-scale=1, minimum-scale=1,  maximum-scale=1, shrink-to-fit=no"
     />
     <link rel="manifest" href="manifest.json" />
 
